@@ -16,7 +16,7 @@ public class Cards {
         V_6, V_7, V_8
     }
 
-    public class Card {
+    public static class Card {
         private Suit suit;
         private Value value;
 
@@ -24,13 +24,21 @@ public class Cards {
             this.suit = suit;
             this.value = value;
         }
+
+        @Override
+        public String toString() {
+            return "Card{"
+                  +  "suit=" + suit
+                  +  ", value=" + value
+                  +  '}';
+        }
     }
 
     public static void main(String[] args) {
         Stream.of(Suit.values())
                 .flatMap(suit -> Stream.of(Value.values())
                         .map(value -> new Card(suit, value)))
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(System.out::println);
     }
 }
